@startuml

Begin : let blah: String

[*] -> Begin

Begin --> Prompt
Begin --> AddAssociation

Prompt --> Authenticate
Prompt --> AddAssociation
Prompt --> EditAssociation

AddAssociation --> EditAddAssociation
EditAddAssociation --> SubmitAddAssociation
EditAddAssociation --> Authenticate
EditAddAssociation --> Prompt
SubmitAddAssociation --> Prompt
EditAssociation --> SubmitEditAssociation
EditAssociation --> SubmitDeleteAssociation
EditAssociation --> Authenticate
SubmitEditAssociation --> Prompt
SubmitDeleteAssociation --> Prompt
SubmitDeleteAssociation --> Authenticate
AddAssociation --> Authenticate
SubmitAddAssociation --> Authenticate
SubmitEditAssociation --> Authenticate
Authenticate --> SubmitDeleteAssociation
Authenticate --> SubmitAddAssociation
Authenticate --> SubmitEditAssociation
Authenticate --> Prompt
Authenticate --> AddAssociation
Authenticate --> EditAddAssociation
Authenticate --> EditAssociation
EditAddAssociation --> AddAssociation
AddAssociation --> Prompt
EditAssociation --> Prompt
SubmitEditAssociation --> EditAssociation
SubmitAddAssociation --> EditAddAssociation
SubmitDeleteAssociation --> EditAssociation

@enduml